--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   "type": "module",
   "workspaces": [
     "src/dkeeper_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6"
+  }
 }
